fix: input style on safari

--- a/app/styles/generic/reset.scss
+++ b/app/styles/generic/reset.scss
@@ -76,4 +76,6 @@ input {
   font-size: 16px;
 
   border: none;
+
+  -webkit-appearance: none;
 }
